# openai-contentcreator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
src/openaicc/: __init__.py  __main__.py  _main.py  openaicc.py
src/openaicc/helpers/: __init__.py  listmodels.py  oaicc_errors.py  openaiconnector.py  ourlogger.py
tests/: test_oaicc.py  test_oaiconnector.py
