[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
openaicc = "openaicc:__main__"

[project]
name = "openaicc"
version = "0.1.0"
authors = [
  { name="Eric Baker", email="e-baker@users.noreply.github.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "openai>=1.13.3" 
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/e-baker/openai-contentcreator"
Issues = "https://github.com/e-baker/openai-contentcreator/issues"